designed services section

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,18 @@ input[type="number"] {
     -moz-appearance: textfield;
     /* Firefox */
 }
+
+
+/* Hide horizontal and vertical scrollbars */
+
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+    /* Chrome, Safari, Opera */
+}
